--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "tpdb/spiders"]
 	path = tpdb/spiders
-	url = git@github.com:ThePornDatabase/scrapers.git
+	url = https://github.com/ThePornDatabase/scrapers.git
