move mongo/api behind settings

--- a/tpdb/settings.py.example
+++ b/tpdb/settings.py.example
@@ -79,7 +79,7 @@ ITEM_PIPELINES = {
 
 # Enable and configure the AutoThrottle extension (disabled by default)
 # See https://docs.scrapy.org/en/latest/topics/autothrottle.html
-AUTOTHROTTLE_ENABLED = False
+AUTOTHROTTLE_ENABLED = True
 # The initial download delay
 AUTOTHROTTLE_START_DELAY = 5
 # The maximum download delay to be set in case of high latencies
@@ -93,8 +93,8 @@ AUTOTHROTTLE_DEBUG = True
 # Enable and configure HTTP caching (disabled by default)
 # See
 # https://docs.scrapy.org/en/latest/topics/downloader-middleware.html#httpcache-middleware-settings
-HTTPCACHE_ENABLED = False
-HTTPCACHE_EXPIRATION_SECS = 7200
+HTTPCACHE_ENABLED = True
+HTTPCACHE_EXPIRATION_SECS = 720
 HTTPCACHE_DIR = 'httpcache'
 # HTTPCACHE_IGNORE_HTTP_CODES = []
 HTTPCACHE_STORAGE = 'scrapy.extensions.httpcache.FilesystemCacheStorage'
@@ -103,3 +103,8 @@ HTTPCACHE_STORAGE = 'scrapy.extensions.httpcache.FilesystemCacheStorage'
 
 LOG_LEVEL = 'INFO'
 DEFAULT_EXPORT_PATH = "./"
+
+
+ENABLE_MONGODB = False
+MONGODB_URL = ''
+TPDB_API_KEY = ''
