--- a/tpdb/settings.py.example
+++ b/tpdb/settings.py.example
@@ -15,6 +15,7 @@
 #   -s export=true (Export to JsonLinesItemExporter file, each line is its own JSON structure.  Good for memory with large datasets)
 #   -s file=<filename> (works with '-s export' to set the filename.  Defaults to "<SpiderName><YYYYMMDD-HHMM>.json")
 #   -s path=<path> (works with '-s export' to set the file path.  Defaults to whatever "DEFAULT_EXPORT_PATH" is set to in this file)
+#   -s days=### (Filters results to only return results within the past ### days.  Without flag will return all results found on page)
 
 
 BOT_NAME = 'tpdb'
