--- a/tpdb/settings.py.example
+++ b/tpdb/settings.py.example
@@ -113,3 +113,6 @@ TPDB_API_KEY = ''
 
 FLARE_URL = 'http://127.0.0.1:8191'
 SPLASH_URL = 'http://127.0.0.1:8090'
+
+PROXY_ADDRESS = 'http://127.0.0.1:8118'
+USE_PROXY = False
