--- a/.github/workflows/submodules.yml
+++ b/.github/workflows/submodules.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Git Sumbodule Update
         run: |
           git pull --recurse-submodules
-          git submodule update --remote --recursive
+          git submodule foreach git pull origin main
 
       - name: Commit update
         run: |
