--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ googletrans = "*"
 deep_translator = "*"
 pytesseract = "*"
 pillow = "*"
+furl = "^2.1.3"
 
 [tool.poetry.group.dev.dependencies]
 flakeheaven = "*"
